<resources>
    <string name="app_name">eMoney Shop</string>
    <string name="action_settings">Settings</string>
    <string name="register">Register</string>
    <string name="close">Close</string>
    <string name="set_up_your_password">Set up your password</string>
    <string name="enter_login_code">Enter login code</string>
    <string name="enter_your_shop_name">Enter your shop name</string>
    <string name="enter_your_full_address">Enter your full address</string>
    <string name="choose_category">Choose category</string>
    <string name="register_account">Register Account</string>
    <string name="get_code">Get code</string>
    <string name="english">English</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password">Forgot password</string>
    <string name="MSG_CM_NO_NETWORK_FOUND">No internet connection, please check your network and try again. Thank you!</string>
    <string name="ERR_RQ_001_EMONEY_ACCOUNT">Please enter your eMoney account number. (phone number)</string>
    <string name="ERR_IV_101_EMONEY_ACCOUNT">Phone number is not valid</string>
    <string name="ERR_RQ_003_NEW_PASSWORD">Please enter your new password</string>
    <string name="ERR_IV_012_FROM_DATE">Please choose FROM DATE</string>
    <string name="ERR_IV_112_FROM_DATE">From date must be less than or equal current date</string>
    <string name="ERR_IV_013_TO_DATE">Please choose TO DATE</string>
    <string name="ERR_IV_113_TO_DATE">To date must be less than or equal current date</string>
    <string name="ERR_IV_114_FROM_TO_DATE">From date must be less than or equal To date</string>
    <string name="ERR_IV_114_MAXIMUM_DATE">Number of days must be less than 60 days</string>
    <string name="ERR_RQ_004_CATEGORY">Please choose category</string>
    <string name="ERR_RQ_005_SHOP_NAME">Please enter your shop name</string>
    <string name="MSG_SUCCESS">MSG_SUCCESS</string>
    <string name="MSG_PAID_SUCCESS">Successful</string>
    <string name="ERR_RQ_006_SHOP_ADDRESS">Please enter your shop address</string>
    <string name="ERR_RQ_007_LOGIN_INFORMATION">Please enter your login information</string>
    <string name="ERR_RQ_002_PRIVATE_CODE">Please enter private code to verify your eMoney account. (Private code have been sent to you via SMS)</string>
    <string name="ERR_IV_102_PRIVATE_CODE">Private code is not valid</string>
    <string name="ERR_RQ_008_NEW_PASSWORD">Please enter new password</string>
    <string name="ERR_IV_109_INVOICE_TITLE">Invoice title is not valid, maximum is 100 characters.</string>
    <string name="ERR_IV_110_AMOUNT">Amount is not valid! Amount is a number must be greater than 0.1 USD or 100 KHR.</string>
    <string name="ERR_IV_111_AMOUNT">Amount is NOT valid!</string>
    <string name="ERR_IV_110_DISCOUNT">Discount is NOT valid!</string>
    <string name="ERR_IV_111_DISCOUNT">Total discount must be less than Amount.</string>
    <string name="ERR_IV_112_TOTAL_AMOUNT">Total amount is a number must be greater than 0.1 USD or 100 KHR</string>
    <string name="ERR_IV_009_INVOICE_TITLE">Please enter invoice title</string>
    <string name="new_receipt">New Receipt</string>
    <string name="receipts">Receipts</string>
    <string name="receipts_2">Receipt(s)</string>
    <string name="receipt">Receipt</string>
    <string name="reports">Reports</string>
    <string name="staffs">Staffs</string>
    <string name="back">Back</string>
    <string name="save">+save</string>
    <string name="staffs_detail">Staff detail</string>
    <string name="staffs_update">Update staff</string>
    <string name="staff_new">New staff</string>
    <string name="shop_detail">Shop detail</string>
    <string name="staff_toolbar_new">+new</string>
    <string name="shop_edit_btn">+edit</string>
    <string name="choose_area">Choose area</string>
    <string name="shop_update">Update shop information</string>
    <string name="setting">Settings</string>
    <string name="change_password">Change password</string>
    <string name="shop_management">Shop management</string>
    <string name="update_shop_information_or_manage_chain">Update your shop information or manage chain</string>
    <string name="currency_exchange_rate">Currency exchange rate</string>
    <string name="common">Commons</string>
    <string name="change_language">Change language</string>
    <string name="bluetooth_printer_setting">Bluetooth printer setting</string>
    <string name="logout">Logout</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="forgot_password_direction">Login with your eMoney account to change password</string>
    <string name="old_password">Old password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="new_password">New password</string>
    <string name="enter_confirm_new_password">Enter confirm new password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="invoice_title">Invoice number:</string>
    <string name="amount">Amount:</string>
    <string name="title">Title:</string>
    <string name="discount">Discount:</string>
    <string name="generate_qr_code">Generate QR code</string>
    <string name="total">Total:</string>
    <string name="qr_code">QR Code</string>
    <string name="request_pay">Request pay</string>
    <string name="ask_customer_use_emonney_app_to_payment">Ask for customer to use eMoney app on their phone, scan below QR Code for payment</string>
    <string name="check_status">Check status</string>
    <string name="send_confirm">Send confirm</string>
    <string name="customer_phone">Customer phone:</string>
    <string name="ask_customer_payment_on_their_phone">Ask for customer to confirm payment on their phone</string>
    <string name="usd">USD</string>
    <string name="khr">KHR</string>
    <string name="choose_shop">Choose shop</string>
    <string name="date_options">Date Options</string>
    <string name="select">Select</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="last_30_days">Last 30 days</string>
    <string name="new_upgrade">New upgrade</string>
    <string name="upgrade">Upgrade</string>
    <string name="content_upgrade">Have new application version (%s), please choose Upgrade to upgrade new application</string>
    <string name="select_language">Select language</string>
    <string name="cambodia">ភាសាខ្មែរ</string>
    <string name="en_language">en</string>
    <string name="km_language">km</string>
    <string name="percent">Percent</string>
    <string name="calculate_percent_discount">Total discount: %s</string>
    <string name="only_for_owner_or_staff">You cannot use this feature, It’s only for Owner or Staff</string>
    <string name="invoice_number">Invoice number:</string>
    <string name="tid">TID:</string>
    <string name="discount_2">Discount:</string>
    <string name="total_amount">Total amount:</string>
    <string name="change_current_exchange_rate">Change currency exchange rate</string>
    <string name="update">Update</string>
    <string name="one_usd">1 USD =</string>
    <string name="choose_printer_device">Choose printer device</string>
    <string name="scanning">Scanning...</string>
    <string name="enter_invoice_title">Enter invoice number</string>
    <string name="shop_name">Shop name</string>
    <string name="active">Active</string>
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="phone_number">Phone number</string>
    <string name="reset_password_success">Reset password success</string>
    <string name="the_new_password_is">(the new password is)</string>
    <string name="enter_emoney_acount">Enter eMoney account</string>
    <string name="owner_phone_number">Owner phone number</string>
    <string name="contact_phone_number">Contact phone number</string>
    <string name="email">Email</string>
    <string name="area">Area</string>
    <string name="address">Address</string>
    <string name="shop_photos">Shop photos</string>
    <string name="new_photo">New photo</string>
    <string name="picture_1">picture 1</string>
    <string name="picture_2">Picture 2</string>
    <string name="enter_your_contact_phone_number">Enter your contact phone number</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="ERR_IV_201_SHOP_NAME">Shop name is NOT valid.</string>
    <string name="ERR_IV_201_CONTACT_PHONE">Contact phone is NOT valid.</string>
    <string name="ERR_IV_201_CONTACT_EMAIL">Contact email is NOT valid.</string>
    <string name="ERR_IV_201_AREA_CODE">Area code is NOT valid.</string>
    <string name="ERR_IV_201_SHOP_ADDRESS">Shop address is NOT valid.</string>
    <string name="only_for_owner">You cannot use this feature, It’s only for Owner</string>
    <string name="done_action">Done</string>
    <string name="ERR_RQ_001_EMONEY_CUSTOMER">Please enter customer’s eMoney account number. (phone number)</string>
    <string name="none_found">No device found</string>
    <string name="none_paired">No matching devices</string>
    <string name="title_paired_devices">Match equipment</string>
    <string name="title_other_devices">Other useful equipment</string>
    <string name="strLang">en</string>
    <string name="string_no">No:</string>
    <string name="thank_using_emoney_sevice">Thank you for using eMoney \n services</string>
    <string name="lost_connection">Lost connection</string>
    <string name="unalbe_connect">Unable to connect printer device</string>
    <string name="connect_to">Connect to printer device</string>
    <string name="connected">Connected</string>
    <string name="title_connecting">Connecting</string>
    <string name="title_not_connected">Not connected</string>
    <string name="exchange">1.00 USD = %s KHR</string>
    <string name="ERR_RQ_018_EXCH_RATE">Please enter currency exchange rate.</string>
    <string name="ERR_RQ_201_OLD_PASSWORD">Please enter old password</string>
    <string name="ERR_RQ_201_NEW_PASSWORD">Please enter new password</string>
    <string name="ERR_RQ_201_CONFIRM_NEW_PASSWORD">Please enter confirm new password</string>
    <string name="ERR_IV_201_PASSWORD_CONFIRM">Confirm new password is not matches.</string>
    <string name="UNVERIFY">Your account have not verified yet, please update your information and waiting verified from Metfone or contact hotline 868.</string>
    <string name="connect_timeout">Connect network fail, please try again later</string>
    <string name="de_active">Deactive</string>
    <string name="lock_status">Locked</string>
    <string name="exit_confirm">Do you want to exit application?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="ERR_SAME_PHONE">Customer phone number is NOT valid, it must be defferent with owner!</string>
    <string name="reset_password">Reset pass</string>
    <string name="update_information">Update information</string>
    <string name="shop">Shop</string>
    <string name="status">Status</string>
    <string name="create_date">Create date</string>
    <string name="please_wait">Please wait</string>
    <string name="print_action">Print QR</string>
    <string name="new_">+new</string>
    <string name="teitle_permission">Permission</string>
    <string name="permission">eShop need to permission\n read phone state and storage\n Thank you!</string>
</resources>