<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_new_receipt"
        android:icon="@drawable/ic_new_receipt"
        android:title="@string/new_receipt"/>
    <item
        android:id="@+id/action_receipts"
        android:icon="@drawable/ic_receipts"
        android:title="@string/receipts"/>
    <item
        android:id="@+id/action_reports"
        android:icon="@drawable/ic_chart_bottom_bar"
        android:title="@string/reports"/>
    <item
        android:id="@+id/action_staffs"
        android:icon="@drawable/ic_staff"
        android:title="@string/staffs"/>
    <item
        android:id="@+id/action_setting"
        android:icon="@drawable/ic_setting"
        android:title="@string/setting"/>
</menu>