<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:textStyle="bold"
                android:text="@string/change_password" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorGrayLight" />

            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/old_password" />

            <EditText
                android:id="@+id/edt_old_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_toLeftOf="@+id/txt_get_code"
                android:background="@drawable/bg_gray_stroke_rectangle"
                android:hint="@string/enter_old_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="@dimen/_10sdp" />

            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/edt_new_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_toLeftOf="@+id/txt_get_code"
                android:background="@drawable/bg_gray_stroke_rectangle"
                android:hint="@string/enter_new_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="@dimen/_10sdp" />

            <TextView
                style="@style/NormalTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:paddingRight="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:text="@string/confirm_new_password" />

            <EditText
                android:id="@+id/edt_confirm_new_password"
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:layout_toLeftOf="@+id/txt_get_code"
                android:background="@drawable/bg_gray_stroke_rectangle"
                android:hint="@string/enter_confirm_new_password"
                android:inputType="textPassword"
                android:maxLength="30"
                android:padding="@dimen/_10sdp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@color/colorGrayLight" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_close"
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:background="@drawable/ripple_effects"
                    android:text="@string/close" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/colorGrayLight" />

                <TextView
                    android:id="@+id/txt_change_password"
                    style="@style/NormalTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/change_password"
                    android:background="@drawable/ripple_effects"
                    android:textColor="@color/colorGreen" />
            </LinearLayout>
        </LinearLayout>

</RelativeLayout>